# ML_in_Finance_project

./: .gitignore  Project Poster.pptx  Project Proposal.docx  Project Report.docx  README.md  RNN_fraud_detection_CC.ipynb  app.py  project_log.csv  pyproject.toml
notebooks/: Initial Exploration.ipynb  Metalabeling-Copy1.ipynb  Metalabeling.ipynb  RNN_fraud_detection_CC.ipynb  SyntheticModelFit.ipynb  SyntheticModelFit_Meta.ipynb
notebooks/.ipynb_checkpoints/: Initial Exploration-checkpoint.ipynb
templates/: index.html
