[tool.poetry]
name = "ml_in_finance_project"
version = "0.1.0"
description = "Machine Learning In Finance"
authors = ["Sidney Fletcher <sfletcher28@bloomberg.net>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
web = "app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
